Invalidate the canvas correctly when <body> and root nodes are added to or removed from documents.  Bug 321751, r+sr=roc